--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,26 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/datenguide.css" type="text/css" media="all" />
     <link rel="stylesheet" href="/static/style.css" type="text/css" media="all" />
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   </head>
   <body>
     {% include '/_header.html' %}
-    {% block hero %}{% include '/_hero.html' %}{% endblock %}
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-8-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-desktop">
           <div>{% block main %}{% endblock %}</div>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
-          <section class="article-list">
-            {% block aside %}{% include './_aside.html' %}{% endblock %}
-          </section>
         </div>
       </div>
     </div>
-
     {% include '/_footer.html' %}
   </body>
 </html>
