--- a/templates/_aside.html
+++ b/templates/_aside.html
@@ -1,10 +1,11 @@
 <h2>Menu</h2>
 <ul>
   <li class="article-list__item">
-    <a class="article-list__link" href="/attribute">
-      <h3 class="article-list__title">Alle Merkmale</h3>
+    <a class="article-list__link" href="/examples/">
+      <h3 class="article-list__title">Beispiele</h3>
       <p class="article-list__description">
-        Liste aller verfügbaren Merkmale in der GENESIS-Datenbank
+        Beispiel-Tabellen und wie man sie abfragt
+      </p>
     </a>
   </li>
   <li class="article-list__item">
@@ -12,6 +13,7 @@
       <h3 class="article-list__title">Datenguide Website</h3>
       <p class="article-list__description">
         Zur Website des datengui.de-Projekts
+      </p>
     </a>
   </li>
 </ul>
